# portfolio

./: Cargo.toml  README.md  Rocket.toml  projects.txt
src/: custom_io.rs  main.rs
static/: custom.css
templates/: index.hbs
