[package]
name = "portfolio"
version = "0.1.0"
authors = ["Jaroslaw Weber <jaroslaw.weber@gmail.com>"]

[dependencies]
rocket = "0.2.8"
rocket_codegen = "0.2.8"
hyper = "0.11.0"
tokio = "0.0.0"
futures = "0.1.14"
tokio-core = "0.1.8"
serde_json = "0.9.0"
handlebars = "0.27.0"

[dependencies.rocket_contrib]
version = "0.2.8"
default-features = false
features = ["handlebars_templates", "tera_templates"]
